<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mgs.message.ui.dashboard.DashboardFragment">

    <EditText
        android:id="@+id/editTextGroupId"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:autofillHints=""
        android:background="@drawable/chat_background_other"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:singleLine="true"
        android:hint="@string/describe_add_group"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonAdd"
        app:layout_constraintEnd_toStartOf="@+id/buttonAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonAdd"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_add_group"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextGroupName"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:autofillHints=""
        android:background="@drawable/chat_background_other"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:singleLine="true"
        android:hint="@string/describe_create_group"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonCreate"
        app:layout_constraintEnd_toStartOf="@+id/buttonCreate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonCreate"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/buttonCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_create_group"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonAdd" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewGroups"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonCreate" />
</androidx.constraintlayout.widget.ConstraintLayout>